[package]
name = "camt053"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.25.0", features = ["serialize"] }
xml-rs = "0.8"
thiserror = "1.0"
serde-xml-rs = "0.5"

[dev-dependencies]
pretty_assertions = "1.0" # Optional, for better assertion messages
